tests/toylang/neg/001064_mutation.toylang
program a = { if a then sleep if; } .
